added .5 degree blom grid

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,9 +22,8 @@ required = True
 
 [ccs_config]
 protocol = git
-#branch feature/add_new_blomgrid
-tag = 17e2cc0
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
+tag = ccs_config_noresm0.0.32
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
@@ -53,7 +52,7 @@ required = True
 [blom]
 protocol = git
 #branch = feature/add_05degree_blom
-tag = 0960fc1
+tag = 7e5a421
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -87,9 +86,8 @@ required = True
 
 [cmeps]
 protocol = git
-#branch = feature/sithick_to_wav (PR done)
-tag = efff64fb
-repo_url = https://github.com/mvertens/CMEPS.git
+tag = cmeps1.0.14
+repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
 required = True
 
