updated ccs_config pointer

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,8 +22,9 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = ccs_config_noresm0.0.32
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+#branch = feature/add_new_blomgrid
+tag = 2d89d78
+repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
