modified pe configuration and testmods

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,9 +22,8 @@ required = True
 
 [ccs_config]
 protocol = git
-#branch = feature/add_new_blomgrid
-tag = 2d89d78
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
+tag = ccs_config_noresm0.0.33
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
@@ -52,8 +51,8 @@ required = True
 
 [blom]
 protocol = git
-#branch = feature/add_05degree_blom
-tag = 7e5a421
+#branch = feature/add_05degree_blom (PR in place)
+tag = b3a1989
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -103,7 +102,7 @@ required = True
 
 [clm]
 protocol = git
-tag = ctsm5.2.005-noresm_v1
+tag = ctsm5.2.005-noresm_v3
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
