updates to nearly all components as part of PR creation

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -40,7 +40,8 @@ required = True
 
 [share]
 protocol = git
-branch = feature/update_share
+#branch = feature/updates_to_share1.0.18 (PR needed)
+tag = 104bce8
 repo_url = https://github.com/mvertens/CESM_share
 local_path = share
 required = True
@@ -51,17 +52,16 @@ required = True
 
 [blom]
 protocol = git
-#branch = feature/add_05degree_blom (PR in place)
-tag = b3a1989
-repo_url = https://github.com/mvertens/BLOM
+tag = 65e0b3e
+repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
 protocol = git
-#branch = feature/UpdateNoresmBranch
-tag = b7d2262b
+#branch = feature/UpdateNoresmBranch (PR made)
+tag = 59fa6872
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -69,8 +69,8 @@ required = True
 
 [cice6]
 protocol = git
-#branch = feature/sithick_to_wav
-tag = da5661b
+#branch = feature/sithick_to_wav (PR needed)
+tag = 3674f22
 repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
@@ -86,15 +86,15 @@ required = True
 
 [cmeps]
 protocol = git
-tag = cmeps1.0.14
+tag = cmeps1.0.15
 repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
 protocol = git
-#branch = feature/cism_coupling_to_ocn
-tag = 5df18f4e
+#branch = feature/cism_coupling_to_ocn (PR made)
+tag = 682e100
 repo_url = https://github.com/mvertens/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
@@ -117,9 +117,8 @@ required = True
 
 [ww3]
 protocol = git
-#tag = ww3_interface_noresm0.0.13
-#repo_url = https://github.com/NorESMhub/WW3_interface
-tag = 51837ef
+#branch feature/rename_ww3dev (PR made)
+tag = 61bb194
 repo_url = https://github.com/mvertens/WW3_interface
 local_path = components/ww3
 externals = Externals.cfg
