updated share to noresmhub

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -40,9 +40,8 @@ required = True
 
 [share]
 protocol = git
-#branch = feature/updates_to_share1.0.18 (PR needed)
-tag = 104bce8
-repo_url = https://github.com/mvertens/CESM_share
+tag = share1.0.19_noresm_v0
+repo_url = https://github.com/NorESMhub/NorESM_share
 local_path = share
 required = True
 
