--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,7 +51,7 @@ required = True
 
 [blom]
 protocol = git
-tag = 887c3e9
+tag = dev1.6.1.5
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -68,8 +68,8 @@ required = True
 
 [cice6]
 protocol = git
-#branch = feature/sithick_to_wav (PR needed)
-tag = 3674f22
+#branch = feature/sithick_to_wav (PR made)
+tag = 416ace6
 repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
