--- a/Externals.cfg
+++ b/Externals.cfg
@@ -68,9 +68,8 @@ required = True
 
 [cice6]
 protocol = git
-#branch = feature/sithick_to_wav (PR made)
-tag = 416ace6
-repo_url = https://github.com/mvertens/CESM_CICE
+tag = cesm_cice6_4_1_7_noresm_v3
+repo_url = https://github.com/NorESMhub/NorESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
