update for oslo-aero

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,8 +59,7 @@ required = True
 
 [cam]
 protocol = git
-#branch = feature/UpdateNoresmBranch (PR made)
-tag = 59fa6872
+branch = feature/UpdateNoresmBranch
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -114,9 +113,8 @@ required = True
 
 [ww3]
 protocol = git
-#branch feature/rename_ww3dev (PR made)
-tag = 61bb194
-repo_url = https://github.com/mvertens/WW3_interface
+tag = ww3_interface_noresm0.0.14
+repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3
 externals = Externals.cfg
 required = True
