--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,7 +59,7 @@ required = True
 
 [cam]
 protocol = git
-branch = feature/UpdateNoresmBranch
+tag = dc59584086e4bc14b0a77462910d574ba8ebd230
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
