udpated cam and ww3

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,8 +59,8 @@ required = True
 
 [cam]
 protocol = git
-tag = dc59584086e4bc14b0a77462910d574ba8ebd230
-repo_url = https://github.com/mvertens/CAM
+tag = noresm2_5_013_cam6_3_15
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -113,7 +113,7 @@ required = True
 
 [ww3]
 protocol = git
-tag = ww3_interface_noresm0.0.14
+tag = ww3_interface_noresm0.0.15
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3
 externals = Externals.cfg
