updates for ww3

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,7 +59,7 @@ required = True
 
 [cam]
 protocol = git
-tag = noresm2_5_013_cam6_3_15
+tag = noresm2_5_013_cam6_3_158
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
