--- a/Externals.cfg
+++ b/Externals.cfg
@@ -72,5 +72,12 @@ repo_url = https://svn-ccsm-models.cgd.ucar.edu/ww3/release_tags
 local_path = components/ww3
 required = False
 
+[norcpm]
+tag = noresm2.0.x
+protocol = git
+repo_url = https://github.com/NorESMhub/norcpm_esp
+local_path = components/norcpm
+required = False
+
 [externals_description]
 schema_version = 1.0.0
