--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
-branch = noresm2_3_chem
+branch = cam_noresm2_3_v1.0.0b
 protocol = git
-repo_url = https://github.com/DirkOlivie/CAM
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
