--- a/Externals.cfg
+++ b/Externals.cfg
@@ -73,7 +73,7 @@ local_path = components/ww3
 required = False
 
 [norcpm]
-tag = noresm2.0.x
+tag = n2.0.8
 protocol = git
 repo_url = https://github.com/NorESMhub/norcpm_esp
 local_path = components/norcpm
