--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,14 +22,14 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = ccs_config_noresm0.0.33
+tag = ccs_config_noresm0.0.35
 repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
 [cime]
 protocol = git
-tag = cime6.0.250_noresm_v0
+tag = cime6.1.28_noresm_v0
 repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
@@ -40,7 +40,7 @@ required = True
 
 [share]
 protocol = git
-tag = share1.0.19_noresm_v0
+tag = share1.1.2_noresm_v0
 repo_url = https://github.com/NorESMhub/NorESM_share
 local_path = share
 required = True
@@ -51,15 +51,14 @@ required = True
 
 [blom]
 protocol = git
-tag = dev1.6.1.5
+tag = dev1.6.1.7
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
-externals = Externals_BLOM.cfg
 required = True
 
 [cam]
 protocol = git
-tag = noresm2_5_013_cam6_3_158
+tag = noresm2_5_014_cam6_3_158
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -67,10 +66,9 @@ required = True
 
 [cice6]
 protocol = git
-tag = cesm_cice6_4_1_7_noresm_v3
+tag = cesm_cice6_5_0_20240702_noresm_v1
 repo_url = https://github.com/NorESMhub/NorESM_CICE
 local_path = components/cice
-externals = Externals.cfg
 required = True
 
 [cdeps]
@@ -83,8 +81,8 @@ required = True
 
 [cmeps]
 protocol = git
-tag = cmeps1.0.15
-repo_url = https://github.com/ESCOMP/CMEPS.git
+branch = feature/update_dms_exchange
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
@@ -98,10 +96,10 @@ required = True
 
 [clm]
 protocol = git
-tag = ctsm5.2.005-noresm_v3
+tag = 5-3-update
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
-externals = Externals_CLM.cfg
+externals = ../../Externals_CLM.cfg
 required = True
 
 [mosart]
