updated blom and cmeps

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,7 +51,7 @@ required = True
 
 [blom]
 protocol = git
-tag = dev1.6.1.7
+tag = dev1.6.1.8
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 required = True
@@ -81,8 +81,8 @@ required = True
 
 [cmeps]
 protocol = git
-branch = feature/update_dms_exchange
-repo_url = https://github.com/mvertens/CMEPS.git
+tag = cmeps1.0.20
+repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
 required = True
 
