--- a/Externals.cfg
+++ b/Externals.cfg
@@ -81,8 +81,8 @@ required = True
 
 [cmeps]
 protocol = git
-tag = cmeps1.0.20
-repo_url = https://github.com/ESCOMP/CMEPS.git
+branch = feature/update_dms_exchange
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
