--- a/Externals.cfg
+++ b/Externals.cfg
@@ -96,7 +96,7 @@ required = True
 
 [clm]
 protocol = git
-tag = 5-3-update
+tag = ctsm5.3.0-noresm_v0
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = ../../Externals_CLM.cfg
