--- a/.gitmodules
+++ b/.gitmodules
@@ -114,8 +114,6 @@ fxDONOTUSEurl = https://github.com/ESCOMP/CISM-wrapper
 
 [submodule "clm"]
 path = components/clm
-#url = https://github.com/NorESMhub/CTSM
-#fxtag = ctsm5.3.0-noresm_v0
 url = https://github.com/mvertens/CTSM
 fxtag = feature/megan_cherrypick_ctsm_mvertens
 fxrequired = ToplevelRequired
@@ -151,3 +149,5 @@ path = tools/statistical_ensemble_test/pyCECT
 url = https://github.com/NCAR/PyCECT.git
 fxtag = 3.2.2
 fxrequired = ToplevelOptional
+[submodule "https://github.com/mvertens/CTSM"]
+	url = clm
