--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_noresm2_3_v1.0.0c
+tag = cam_noresm2_3_v1.0.0d
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
