--- a/.gitmodules
+++ b/.gitmodules
@@ -93,22 +93,22 @@ fxDONOTUSEurl = https://github.com/NorESMhub/CAM.git
 
 [submodule "cdeps"]
 path = components/cdeps
-url = https://github.com/ESCOMP/CDEPS.git
-fxtag = cdeps1.0.53
+url = https://github.com/NorESMhub/CDEPS.git
+fxtag = cdeps1.0.70_noresm_v0
 fxrequired = ToplevelRequired
-fxDONOTUSEurl = https://github.com/ESCOMP/CDEPS.git
+fxDONOTUSEurl = https://github.com/NorESMhub/CDEPS.git
 
 [submodule "cice6"]
 path = components/cice
 url = https://github.com/NorESMhub/NorESM_CICE
-fxtag = cesm_cice6_5_0_20240702_noresm_v2
+fxtag = cesm_cice6_5_0_20240702_noresm_v3
 fxrequired = ToplevelRequired
 fxDONOTUSEurl = https://github.com/NorESMhub/NorESM_CICE
 
 [submodule "cism"]
 path = components/cism
 url = https://github.com/NorESMhub/CISM-wrapper
-fxtag = cismwrap_2_2_002_noresm_v1
+fxtag = cismwrap_2_2_006_noresm_v1
 fxrequired = ToplevelRequired
 fxDONOTUSEurl = https://github.com/NorESMhub/CISM-wrapper
 
@@ -122,21 +122,21 @@ fxDONOTUSEurl = https://github.com/NorESMhub/CTSM
 [submodule "cmeps"]
 path = components/cmeps
 url = https://github.com/NorESMhub/CMEPS.git
-fxtag = cmeps1.0.20_noresm_v0
+fxtag = cmeps1.0.39_noresm_v0
 fxrequired = ToplevelRequired
 fxDONOTUSEurl = https://github.com/NorESMhub/CMEPS.git
 
 [submodule "mosart"]
 path = components/mosart
 url = https://github.com/ESCOMP/MOSART
-fxtag = mosart1.1.02
+fxtag = mosart1.1.08
 fxrequired = ToplevelRequired
 fxDONOTUSEurl = https://github.com/ESCOMP/MOSART
 
 [submodule "ww3"]
 path = components/ww3
 url = https://github.com/NorESMhub/WW3_interface.git
-fxtag = ww3_interface_noresm0.0.16
+fxtag = ww3_interface_noresm0.0.17
 fxrequired = ToplevelRequired
 fxDONOTUSEurl = https://github.com/NorESMhub/WW3_interface.git
 
